[project]
name = "corridorkey-coreml-student"
version = "0.1.0"
description = "Knowledge-distillation pipeline that trains an ANE-friendly matting student (MobileNetV3 + LR-ASPP + ConvGRU, RVM-class) from the CorridorKey GreenFormer teacher, and exports the trained student to Core ML MLProgram for Apple Neural Engine deployment on macOS."
requires-python = "==3.11.*"
dependencies = [
    # PyTorch 2.5 is the latest version exercised by coremltools 8.x; the
    # coremltools release notes flag 2.6 as untested and occasionally mis-
    # traces 5D SDPA operations. Staying on 2.5 preserves Core ML export
    # reliability for slice 0.7.5-5d.
    "torch==2.5.1",
    "torchvision==0.20.1",
    "numpy<2.0",
    "coremltools>=8.3,<9",
    "einops>=0.8",
    # Video IO. av wraps FFmpeg with a stable Python API; opencv-python-headless
    # is used for image composition and morphological ops in the data pipeline.
    "av>=12.0",
    "opencv-python-headless>=4.9",
    "safetensors>=0.4",
    "timm>=1.0",
    "huggingface_hub>=0.26",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# Experiment tracking is optional so a fresh checkout can run training
# without external services. Enable with --extra tracking when needed.
tracking = [
    "tensorboard>=2.16",
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coreml_student"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
