[project]
name = "model-exporter"
version = "0.1.0"
description = "Isolated Python tool to export the CorridorKey PyTorch model to ONNX for the C++ runtime."
requires-python = "==3.10.*"
dependencies = [
    "torch==2.3.1",
    "torchvision==0.18.1",
    "onnx>=1.15.0",
    "onnxruntime<1.20.0",
    "onnxsim>=0.4.36",
    "timm>=0.9.12",
    "opencv-python-headless>=4.8.1",
    "numpy<2.0.0"
]

[tool.uv]
managed = true
