[project]
name = "torchtrt-compiler"
version = "0.1.0"
description = "Compile CorridorKey PyTorch checkpoints into Torch-TensorRT (.ts) engines for the Windows RTX blue model pack."
requires-python = "==3.12.*"

# These pins MUST match the runtime DLL stack staged into
# vendor/torchtrt-windows/ by scripts/prepare_windows_torchtrt_release.ps1.
# Mismatched torch / torch_tensorrt / tensorrt versions between compile-time
# and load-time produce "Unknown builtin op: tensorrt::execute_engine" or
# silent NaN inference.
dependencies = [
    "torch==2.8.0+cu128",
    "torchvision==0.23.0+cu128",
    "torch-tensorrt==2.8.0",
    "tensorrt-cu12==10.12.0.36",
    "timm>=0.9.12",
    "numpy<2.0.0",
    "huggingface_hub>=0.25.0",
    # CorridorKeyModule.core.model_transformer imports cv2 at module load
    # time even though the model itself does not use OpenCV at compile.
    "opencv-python-headless>=4.8.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.uv]
managed = true
# Restrict resolution to the Windows x86_64 environment that ships the
# Sprint 1 blue model pack. Without this, uv tries to satisfy
# torch-tensorrt's split for aarch64-Tegra (which pins tensorrt==10.3.0)
# and the Windows pin (tensorrt-cu12==10.12.0.36) simultaneously, which
# is unsatisfiable.
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
